--- a/sass/components/_occupation.scss
+++ b/sass/components/_occupation.scss
@@ -1,5 +1,10 @@
 .occupation {
     padding: 94px 0;
+    display: none;
+
+    @include desktop {
+        display: block;
+    }
 }
 
 .occupation__title {
