--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,7 @@
     @include flex;
     gap: 10px;
     min-width: 200px;
+    margin-top: 20px;
 
     &::after {
         content: "";
@@ -41,6 +42,10 @@
         background-image: url(../images/icons.svg/icon\ send.svg);
         width: 24px;
         height: 24px;
+    }
+
+    @include desktop {
+        margin-top: 0;
     }
 }
 
