--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -46,7 +46,8 @@
     display: inline-block;
     background: #F5F4FA;
     border-radius: 4px;
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
     height: 120px;
     margin-bottom: 30px;
     background-repeat: no-repeat;
@@ -96,7 +97,8 @@
     display: block;
     @include font (null, 14px, 1.71, 0.03em);
     color: var(--secondary-color-text);
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
 
     @include tablet {
         width: 354px;
