--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,8 +2,13 @@
     margin-right: 93px;
     font-family: 'Raleway';
     font-style: normal;
-    @include font (700, 26px, calc(31/26), 0.03em);
+    @include font (700, 24px, calc(28/24), 0.03em);
     color: #000000;
+
+    @include desktop {
+        @include font (700, 26px, calc(31/26), 0.03em);
+    }
+
 }
 
 .logo-color {
