--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-    display: inline-block;
+    display: block;
     border: none;
     border-radius: 4px;
     padding: 10px 32px;
@@ -26,6 +26,18 @@
     }
 }
 
+// ______MENU________________
+.menu-open {
+    display: block;
+    border: none;
+    background-color: #fff;
+    width: 40px;
+    height: 40px;
+
+    @include tablet {
+        display: none;
+    }
+}
 
 
 // ___FOOTER_____
