--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,20 +1,61 @@
 .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-    padding: 200px 0;
-    max-width: 1600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-mobile.jpg);
+    max-width: 480px;
+    padding: 118px 0;
+    width: 100%;
     text-align: center;
     margin: 0 auto;
-}
 
+    @include retina {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-mobile-2x.jpg);
+    }
+
+    @include tablet {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-tablet.jpg);
+        max-width: 768px;
+        padding: 118px 0;
+        width: 100%;
+
+        @include retina {
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-tablet-2x.jpg);
+        }
+
+    }
+
+
+    @include desktop {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+        padding: 200px 0;
+        max-width: 1600px;
+        text-align: center;
+        margin: 0 auto;
+
+        @include retina {
+
+            background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-2x.jpg);
+        }
+    }
+}
 
 .hero__title {
     margin-top: 0;
     margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
-    width: 696px;
+    max-width: 360px;
+    width: 100%;
+    text-align: center;
 
     color: var(--white-color-text);
-    @include font (900, 44px, 1.36, 0.06em);
+    @include font (900, 26px, calc(42 /26), 0.06em);
     text-transform: uppercase;
+
+    @include desktop {
+        @include font (900, 44px, 1.36, 0.06em);
+        min-width: 696px;
+        margin-top: 0;
+        margin-bottom: 30px;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
