--- a/css/main.css
+++ b/css/main.css
@@ -317,6 +317,9 @@ body {
   margin-right: auto;
 }
 
+.nav__list {
+  display: none;
+}
 @media screen and (min-width: 768px) {
   .nav__list {
     display: block;
@@ -394,6 +397,51 @@ body {
 }
 .nav__contacts:hover, .nav__contacts:focus {
   color: var(--accent-color);
+}
+
+.mob-container {
+  outline: 1px solid red;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  top: 0;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  color: #212121;
+}
+
+.menu-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-close {
+  fill: currentColor;
+}
+.menu-close:hover .menu-close, .menu-close:focus .menu-close {
+  color: var(--accent-color);
+}
+
+.menu__link {
+  color: var(--main-color-text);
+  font-weight: 500;
+  font-size: px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
 }
 
 .hero {
