--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -18,7 +18,7 @@
 }
 
 .nav__list {
-    // display: none;
+    display: none;
 
     @include tablet {
         display: block;
@@ -100,14 +100,54 @@
 }
 
 // ________MENU__________
-.mob-menu {}
 
-.menu-open {}
+.mob-container {
 
-.menu-open-icon {}
+    outline: 1px solid red;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
 
-.menu__list {}
+}
+
+.mob-menu {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+    top: 0;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    color: #212121;
+}
+
+.menu-close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+    background-color: transparent;
+    border: none;
+
+    cursor: pointer;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.menu-close {
+    fill: currentColor;
+
+    .menu-close:hover &,
+    .menu-close:focus & {
+        color: var(--accent-color);
+    }
+}
 
 .menu__item {}
 
-.menu-soc {}
+.menu__link {
+    color: var(--main-color-text);
+    @include font (500, px, calc(47 / 40), 0.02em);
+}
