--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,9 @@
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  max-width: 450px;
+  min-height: 609px;
+  width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -30,6 +31,12 @@
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scaleY(0) rotate(-15deg);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-close {
@@ -63,13 +70,22 @@
 }
 
 .modal-heading {
+  max-width: 448px;
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--main-color-text);
+}
+@media screen and (min-width: 1200px) {
+  .modal-heading {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+  }
 }
 
 .modal-wrap {
@@ -87,6 +103,7 @@
 .modal-input {
   padding-left: 42px;
   padding-right: 12px;
+  max-width: 448px;
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -177,10 +194,17 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.03em;
   color: var(--secondary-color-text);
+}
+@media screen and (min-width: 1200px) {
+  .check-text {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .check-text span {
@@ -284,12 +308,18 @@ body {
   letter-spacing: 0.03em;
   color: #000000;
 }
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 87px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .logo {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.1923076923;
     letter-spacing: 0.03em;
+    margin-right: 93px;
   }
 }
 
@@ -299,13 +329,6 @@ body {
 
 .header {
   border-bottom: 1px solid #ececec;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-@media screen and (min-width: 768px) {
-  .header {
-    padding: 0;
-  }
 }
 
 .header--posihion {
@@ -327,61 +350,90 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .nav__list--posihion {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav__list--posihion {
+    flex-direction: row;
+    gap: 30px;
+  }
+}
+
 .nav__item {
   display: flex;
   align-items: center;
   color: var(--secondary-color-text);
 }
 
-.nav__link {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--main-color-text);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  letter-spacing: 0.02em;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav__link:hover, .nav__link:focus {
-  color: var(--accent-color);
-}
-
-.current {
-  color: var(--accent-color);
-}
-.current::after {
-  position: absolute;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background: #2196F3;
-  border-radius: 2px;
-  opacity: 0;
-  transform: scaleX(1.1);
+@media screen and (min-width: 768px) {
+  .nav__link {
+    position: relative;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: var(--main-color-text);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    letter-spacing: 0.02em;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav__link:hover, .nav__link:focus {
+    color: var(--accent-color);
+  }
 }
 
-.nav__link.current::after {
-  opacity: 1;
+@media screen and (min-width: 768px) {
+  .current {
+    color: var(--accent-color);
+  }
+  .current::after {
+    position: absolute;
+    bottom: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #2196F3;
+    border-radius: 2px;
+    opacity: 0;
+    transform: scaleX(1.1);
+  }
 }
 
-.nav__icon {
-  margin-right: 10px;
-  fill: currentColor;
+@media screen and (min-width: 768px) {
+  .nav__link.current::after {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__icon {
+    margin-right: 10px;
+    fill: currentColor;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav__icon {
+    width: 16px;
+    height: 12px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .nav__icon--size {
+    height: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .nav__contacts {
-    display: flex;
-    align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
     color: var(--secondary-color-text);
     font-weight: 500;
     font-size: 14px;
@@ -392,21 +444,16 @@ body {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .nav__contacts:hover, .nav__contacts:focus {
-    color: var(--accent-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    letter-spacing: 0.02em;
   }
 }
-
-.mob-container {
-  outline: 1px solid red;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: auto;
-}
-@media screen and (min-width: 768px) {
-  .mob-container {
-    display: none;
+@media screen and (min-width: 1200px) {
+  .nav__contacts {
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -418,7 +465,17 @@ body {
   top: 0;
   padding-top: 48px;
   padding-bottom: 48px;
+  padding-left: 40px;
   color: #212121;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
 }
 
 .menu-close {
@@ -428,22 +485,79 @@ body {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-close {
+.menu-close-icon {
   fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-close:hover .menu-close, .menu-close:focus .menu-close {
+.menu-close:hover .menu-close-icon, .menu-close:focus .menu-close-icon {
   color: var(--accent-color);
+}
+
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+  margin-bottom: 302px;
 }
 
 .menu__link {
   color: var(--main-color-text);
   font-weight: 500;
-  font-size: px;
+  font-size: 40px;
   line-height: 1.175;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu__link:hover, .menu__link:focus {
+  color: var(--accent-color);
+}
+
+.menu__contact {
+  margin-bottom: 32px;
+}
+.menu__contact:last-child {
+  margin-bottom: 64px;
+}
+
+.menu__contacts {
+  color: var(--secondary-color-text);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), font 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu__contacts:hover, .menu__contacts:focus {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+}
+
+.menu-soc {
+  display: flex;
+  gap: 20px;
+}
+
+.menu-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  position: relative;
+}
+.menu-soc-link::after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  position: absolute;
+  bottom: 50%;
+  width: 22px;
+  height: 0px;
+  transform: rotate(90deg);
 }
 
 .hero {
@@ -956,7 +1070,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 210px;
+  max-width: 226px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -964,11 +1078,6 @@ body {
   transition-property: color, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 768px) {
-  .client-link {
-    width: 226px;
-  }
 }
 @media screen and (min-width: 1200px) {
   .client-link {
