--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -32,6 +32,7 @@
     width: calc ((100 - 30px) / 2);
 
 
+
     @include tablet {
         width: calc ((100 - 60px) / 3);
     }
@@ -41,11 +42,8 @@
     @include flex;
     justify-content: center;
 
-    width: 210px;
+    max-width: 226px;
 
-    @include tablet {
-        width: 226px;
-    }
 
     @include desktop {
         width: 170px;
