--- a/sass/utils/_modal.scss
+++ b/sass/utils/_modal.scss
@@ -1,15 +1,20 @@
 .backdrop {
+
     position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.1);
     transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1), visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 
 .modal {
-    width: 528px;
-    min-height: 581px;
+    max-width: 450px;
+    min-height: 609px;
+    width: 100%;
+
     background-color: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -21,8 +26,14 @@
     transform: translate(-50%, -50%) scaleY(1) rotate(0deg);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+
     .backdrop.is-hidden & {
         transform: translate(-50%, -50%) scaleY(0) rotate(-15deg)
+    }
+
+    @include desktop {
+        min-width: 528px;
+        min-height: 581px;
     }
 }
 
@@ -60,11 +71,17 @@
     pointer-events: none;
 }
 
+
 .modal-heading {
+    max-width: 448px;
     margin-bottom: 12px;
-    @include font (700, 20px, calc(23 / 20), 0.03em);
+    @include font (700, 20px, calc(30 / 20), 0.03em);
     text-align: center;
     color: var(--main-color-text);
+
+    @include desktop {
+        @include font (700, 20px, calc(23 / 20), 0.03em);
+    }
 }
 
 .modal-wrap {
@@ -80,6 +97,7 @@
 .modal-input {
     padding-left: 42px;
     padding-right: 12px;
+    max-width: 448px;
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -156,8 +174,12 @@
     justify-content: center;
     gap: 8px;
 
-    @include font (null, 14px, 1.71, 0.03em);
+    @include font (null, 12px, calc(14 / 12), 0.03em);
     color: var(--secondary-color-text);
+
+    @include desktop {
+        @include font (null, 14px, 1.71, 0.03em);
+    }
 
 }
 
