--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -21,41 +21,31 @@
 }
 
 
-
 .client-list {
     display: flex;
-    flex-wrap: wrap;
     gap: 30px;
 }
 
-.client-item {
-    width: calc ((100 - 30px) / 2);
+// .client-item {
+//     width: calc((100 - 30px) / 2);
 
-
-
-    @include tablet {
-        width: calc ((100 - 60px) / 3);
-    }
-}
+//     @include tablet {
+//         width: calc((100 - 60px) / 3);
+//     }
+// }
 
 .client-link {
     @include flex;
     justify-content: center;
 
-    max-width: 226px;
-
-
-    @include desktop {
-        width: 170px;
-    }
-
+    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     color: #afb1b8;
 
-    transition-property: color,
-    border;
+    transition-property: color, border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -64,6 +54,7 @@
         color: var(--accent-color);
         border: 1px solid var(--accent-color);
     }
+
 }
 
 .client-icon {
