--- a/css/main.css
+++ b/css/main.css
@@ -270,7 +270,6 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
-  outline: 1px solid red;
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -1232,9 +1231,20 @@ body {
 .footer-form {
   position: relative;
 }
+@media screen and (min-width: 768px) {
+  .footer-form {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+}
 
 .footer-input {
-  display: block;
   max-width: 450px;
   width: 100%;
   height: 50px;
@@ -1254,11 +1264,6 @@ body {
 .footer-input:focus {
   border: 1px solid var(--accent-color);
 }
-@media screen and (min-width: 768px) {
-  .footer-input {
-    margin: auto;
-  }
-}
 @media screen and (min-width: 1200px) {
   .footer-input {
     width: 358px;
@@ -1268,8 +1273,7 @@ body {
 .footer-label {
   position: absolute;
   left: 0px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 0px;
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   font-size: 16px;
@@ -1286,6 +1290,12 @@ body {
 }
 .footer-input:focus + .footer-label, .footer-input:not(:placeholder-shown) + .footer-label {
   opacity: 0;
+}
+@media screen and (min-width: 1200px) {
+  .footer-label {
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 
 .portfolio-section {
